--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -15,8 +15,9 @@ h1, h2, h3 {
     height: 90vh;
     width: 80%;
     max-width: 100%;
-    background-color: #5E488E;
+    background-color: #6A8EAE;
     padding: 5vh 10%;
+    vertical-align: middle;
 }
 
 .logo-component {
@@ -25,30 +26,20 @@ h1, h2, h3 {
     font-size: 35px;
     display: inline;
     color: #F1F1F6;
+    -webkit-animation: slideIn 2s forwards;
+    -moz-animation: slideIn 2s forwards;
+    animation: slideIn 2s forwards;
 }
 
 .bold {
     font-weight: 700;
 }
 
-.navbar-link {
-    text-decoration: none;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    font-size: 20px;
-    color: #F1F1F6;
-    padding-top: 0.5vh;
-    float: right;
-}
-
-.rmarg-5vw {
-    margin-right: 5%;
-}
-
 .home-visual {
-    position: absolute;
-    top: 24vh;
-    right: 10vw;
+    /*position: absolute;
+    top: 25vh;
+    right: 10vw;*/
+
 }
 .polygon {
     z-index: 2;
@@ -71,14 +62,19 @@ h1, h2, h3 {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-size: 60px;
-    color: #F1F1F6;
+    color: #ADFFFA  ;
+    -webkit-animation: fadein 3s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 3s; /* Firefox < 16 */
+        -ms-animation: fadein 3s; /* Internet Explorer */
+         -o-animation: fadein 3s; /* Opera < 12.1 */
+            animation: fadein 3s;
 }
 
 .sub-text {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 18px;
-    width: 40%;
+    width: 80%;
     color: #F1F1F6;
     display: block;
     letter-spacing: 2px;
@@ -87,25 +83,84 @@ h1, h2, h3 {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
     color: #F1F1F6;
-    background-color: #767BF2;
+    background-color: #57A773;
     margin-top: 20px;
     padding: 8px;
     border-radius: 5px;
     display: inline-block;
-    transition: 0.3s;
+    /*transition: 0.3s;
+    animation: glowing 2000ms infinite;*/
 }
 
 .resume:hover {
-    background-color: rgba(115, 120, 248, 0.329);
+    background-color: #409749;
     color: rgba(255, 255, 255, 0.445);
+    -webkit-animation-play-state: paused;
+    -moz-animation-play-state: paused;
+    -o-animation-play-state: paused;
+    animation-play-state: paused;
 }
 
+.resume > p {
+    display: inline;
+    vertical-align: middle;
+    margin-left: 4px;
+}
+
+.resume_img {
+    vertical-align: middle;
+    height: 25px;
+    width: 19px;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    width: 80%;
+    height: 40px;
+    background-color: #6A8EAE;
+    padding: 5vh 10%;
+}
+
+.navbar-content {
+    margin: auto;
+}
+.navbar-link {
+    text-decoration: none;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
+    color: #F1F1F6;
+    padding-top: 0.5vh;
+    float: right;
+}
+
+.rmarg-5vw {
+    margin-right: 5%;
+}
+
+.content {
+    height: 100%;
+}
+
+.inner-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+.home-card{
+}
+
+.card-box {
+    border: 2px solid white;
+}
 /* Section II: My Background */
 #background-container {
     height: 80vh;
     width: 70%;
     max-width:100%;
-    background-color: #B5B9FF;
+    background-color: #57A773;
     padding: 10vh 15%;
 }
 
@@ -160,7 +215,7 @@ h1, h2, h3 {
     height: 80vh;
     width: 70%;
     max-width:100%;
-    background-color: #97A2FF;
+    background-color: #89BED1;
     padding: 10vh 15%;
 }
 
@@ -213,16 +268,19 @@ h3.regular-text {
 
 @media screen and (min-width: 1441px) {
     .content {
-        height: 572px;
         width: 1152px;
         max-width: 100%;
         margin: 0px auto;
     }
-    .home-visual {
+    .navbar-content {
+        width: 1152px;
+        margin: auto;
+    }
+    /*.home-visual {
         position: absolute;
         top: 24vh;
         right: 20vw;
-    }
+    }*/
 
     .profile-border-square-1 {
         position: absolute;
@@ -248,4 +306,24 @@ h3.regular-text {
     .profile-desc {
         width: 500px;
     }
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+@keyframes slideIn {
+    0% {
+      transform: translateX(-900px);
+    }
+    100% {
+      transform: translateX(0);
+    }
+  }
+
+@keyframes glowing {
+    0% { background-color: rgb(72, 77, 226); box-shadow: 0 0 3px rgb(72, 77, 226); }
+    50% { background-color: rgb(103, 108, 235); box-shadow: 0 0 10px rgb(103, 108, 235); }
+    100% { background-color: #767BF2; box-shadow: 0 0 3px #767BF2; }
 }
