--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -1,19 +1,28 @@
-<section id="top-container">
-   <div class='content'>
+<div class="navbar">
+   <div class="navbar-content" >
       <h1 class="logo-component bold">Jonathan</h1><h1 class="logo-component">Hong</h1>
       <%= link_to "Contact", '#background-container',:class => 'navbar-link'%>
       <%= link_to "Work", '#background-container',:class => 'navbar-link rmarg-5vw'%>
-      <p class="regular-text marg-top-24vh">Hi, my name is</p>
-      <h1 class="large-text bold">Jonathan Hong</h1>
-      <p class="sub-text">A full stack software engineer focused on building seamless interfaces and improving user experiences.</p>
+   </div>
+</div>
+<section id="top-container">
+   <div class="content">
+      <div class="inner-content">
+         <div class="home-card">
+            <p class="regular-text">Hi, my name is</p>
+            <h1 class="large-text bold">Jonathan Hong</h1>
+            <p class="sub-text">A full stack software engineer focused on building seamless interfaces and improving user experiences.</p>
    
-      <%= link_to "View my resume", 'https://www.dropbox.com/s/279qikkjwe6cevh/Jonathan%20Hong%20Resume.pdf?dl=0', :target => '_blank', :class => 'resume'%>
-     
-      <%= image_tag 'polygon.svg', :class => 'home-visual polygon'%>
-      <%= image_tag 'rectangle.svg', :class => 'home-visual rectangle'%>
-   </div>   
+            <%= link_to 'https://www.dropbox.com/s/279qikkjwe6cevh/Jonathan%20Hong%20Resume.pdf?dl=0', :target => '_blank', :class => 'resume' do%>
+            <%= image_tag('resume.svg', :class => 'resume_img')%> <p>View my resume</p>
+            <% end %>
+         </div>
+         <%= image_tag 'home-visual.svg', :class => 'home-visual'%>
+      </div>
+   </div>
 </section>
 
+<% if false %>
 <section id='background-container'>
    <div class='content'>
       <h1 class='section-title'>Background</h1> <hr class='background-hr'>
@@ -46,3 +55,4 @@
       </div>
    </div>
 </section>
+<% end %>
