--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -19,21 +19,25 @@
          </div>
          <%= image_tag 'home-visual.svg', :class => 'home-visual'%>
       </div>
+      <div>New Brunswick, NJ</div>
    </div>
 </section>
 
-<% if false %>
+
 <section id='background-container'>
    <div class='content'>
-      <h1 class='section-title'>Background</h1> <hr class='background-hr'>
-      <p class="sub-text width-30vw marg-top-7vh profile-desc">Hello, I’m Jonathan, a software enginner based in New Brunswick, NJ. I’m expecting to graduate from Rutgers University School of Engineering in May of 2020, pursuing a Bachelor of Science in Computer Engineering with a minor in Computer Science.</p>
-      <p class="sub-text width-30vw marg-top-7vh profile-desc">Here are a few technologies I’ve been working with:</p>
-      <%= image_tag 'profile_square.svg', :class => 'profile-border-square-1'%>
-      <%= image_tag 'me.jpg', :class => 'profile-picture', :width => '300', :height => '300' %>
-      <%= image_tag 'profile_square.svg', :class => 'profile-border-square-2'%>
+      <div class='inner-content'>
+         <div class='about-card'>
+            <h1 class='section-title'>About Me</h1>
+            <p class="sub-text width-30vw profile-desc">Hello, I’m Jonathan, a software engineer based in New Brunswick, NJ. I’m expecting to graduate from Rutgers University School of Engineering in May of 2020, pursuing a Bachelor of Science in Computer Engineering with a minor in Computer Science.</p>
+         </div>
+         <%= image_tag 'jon.png', :class => 'profile-visual'%>
+      </div>
    </div>
 </section>
 
+
+<% if false %>
 <section id='projects-container'>
    <div class='content'>
       <h1 class='section-title'>Noteworthy Projects</h1> <hr class='projects-hr'>
