--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -17,7 +17,7 @@ h1, h2, h3 {
     height: 90vh;
     width: 80%;
     max-width: 100%;
-    background-color: #6A8EAE;
+    background-color: #64B6AC;
     padding: 5vh 10%;
     
 }
@@ -63,6 +63,38 @@ h1, h2, h3 {
 .marg-top-24vh{
     margin-top: 24vh
 }
+
+#home-logo path:nth-child(1) {
+
+}
+#home-logo path:nth-child(2) {
+
+}
+#home-logo path:nth-child(3) {
+
+}
+#home-logo path:nth-child(4) {
+
+}
+#home-logo path:nth-child(5) {
+
+}
+#home-logo path:nth-child(6) {
+
+}
+#home-logo path:nth-child(7) {
+
+}
+#home-logo path:nth-child(8) {
+
+}
+#home-logo path:nth-child(9) {
+
+}
+#home-logo path:nth-child(10) {
+
+}
+
 
 .large-text {
     font-family: 'Roboto', sans-serif;
@@ -176,7 +208,7 @@ h1, h2, h3 {
     height: 80vh;
     width: 70%;
     max-width:100%;
-    background-color: #57A773;
+    background-color: #FCFFFD;
     padding: 10vh 15%;
 }
 
@@ -191,13 +223,14 @@ h1, h2, h3 {
     font-weight: 700;
     font-size: 35px;
     width: 25%;
-    color: #F1F1F6;
+    color: black;
     margin: auto 0;
     margin-right: 0px;
 }
 .profile-desc {
     text-align: justify;
-    border-left: 2px solid #F1F1F6;
+    color: black;
+    border-left: 2px solid black;
     padding-left: 20px;
 }
 
