--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,6 +7,7 @@ html, body {
     margin: 0;
     padding: 0;
     position: relative;
+    overflow-x: hidden;
 }
 
 h1, h2, h3 {
@@ -46,6 +47,8 @@ h1, h2, h3 {
     -webkit-user-drag: none;
     -webkit-user-select: none;
     -ms-user-select: none;
+    opacity: 0;
+    animation: fadeIn 0.5s ease forwards 2.7s;
 }
 .polygon {
     z-index: 2;
@@ -59,42 +62,79 @@ h1, h2, h3 {
     font-size: 25px;
     color: #F1F1F6;
     letter-spacing: 1px;
+    opacity: 0;
+    animation: fadeIn 1s ease forwards 2.7s;
 }
 .marg-top-24vh{
     margin-top: 24vh
 }
 
-#home-logo path:nth-child(1) {
+#home-logo {
+    animation: fill-text 0.5s ease-out forwards 2.1s;
+}
 
+#home-logo path:nth-child(1) {
+    stroke-dasharray: 161.18307495117188;
+    stroke-dashoffset: 161.18307495117188;
+    animation: line-animations 1s ease-out forwards;
 }
 #home-logo path:nth-child(2) {
-
+    stroke-dasharray: 185;
+    stroke-dashoffset: 185;
+    animation: line-animations 1s ease-out forwards 0.1s;
 }
 #home-logo path:nth-child(3) {
-
+    stroke-dasharray: 209.5389;
+    stroke-dashoffset: 209.5389;
+    animation: line-animations 1s ease-out forwards 0.2s;
 }
 #home-logo path:nth-child(4) {
-
+    stroke-dasharray: 219;
+    stroke-dashoffset: 219;
+    animation: line-animations 1s ease-out forwards 0.3s;
 }
 #home-logo path:nth-child(5) {
-
+    stroke-dasharray: 155;
+    stroke-dashoffset: 155;
+    animation: line-animations 1s ease-out forwards 0.4s;
 }
 #home-logo path:nth-child(6) {
-
+    stroke-dasharray: 235;
+    stroke-dashoffset: 235;
+    animation: line-animations 1s ease-out forwards 0.5s;
 }
 #home-logo path:nth-child(7) {
-
+    stroke-dasharray: 219;
+    stroke-dashoffset: 219;
+    animation: line-animations 1s ease-out forwards 0.6s;
 }
 #home-logo path:nth-child(8) {
-
+    stroke-dasharray: 209.53929;
+    stroke-dashoffset: 209.53929;
+    animation: line-animations 1s ease-out forwards 0.7s;
 }
 #home-logo path:nth-child(9) {
-
+    stroke-dasharray: 262;
+    stroke-dashoffset: 262;
+    animation: line-animations 1s ease-out forwards 0.8s;
 }
 #home-logo path:nth-child(10) {
-
+    stroke-dasharray: 185;
+    stroke-dashoffset: 185;
+    animation: line-animations 1s ease-out forwards 0.9s;
 }
 
+#home-logo path:nth-child(11) {
+    stroke-dasharray: 209.53952;
+    stroke-dashoffset: 209.53952;
+    animation: line-animations 1s ease-out forwards 1.0s;
+}
+
+#home-logo path:nth-child(12) {
+    stroke-dasharray: 302;
+    stroke-dashoffset: 302;
+    animation: line-animations 1s ease-out forwards 1.1s;
+}
 
 .large-text {
     font-family: 'Roboto', sans-serif;
@@ -116,17 +156,22 @@ h1, h2, h3 {
     color: #F1F1F6;
     display: block;
     letter-spacing: 2px;
+    opacity: 0;
+    animation: fadeIn 1s ease forwards 2.7s;
+
 }
 .resume {
     text-decoration: none;
     font-family: 'Roboto', sans-serif;
-    color: rgb(214, 214, 214);
-    background-color: #57A773;
+    color: rgba(214, 214, 214, 0);
+    background-color: rgba(87, 167, 115, 0);
     margin-top: 20px;
     padding: 8px;
     border-radius: 5px;
     display: inline-block;
     transition: 0.3s;
+    pointer-events: none;
+    animation: resumeAppear 1s ease forwards 2.7s;
     /*animation: glowing 2000ms infinite;*/
 }
 
@@ -150,6 +195,8 @@ h1, h2, h3 {
     vertical-align: middle;
     height: 25px;
     width: 19px;
+    opacity: 0;
+    animation: fadeIn 0.5s ease forwards 2.7s;
 }
 
 .navbar {
@@ -157,11 +204,14 @@ h1, h2, h3 {
     top: 0;
     width: 80%;
     height: 20px;
-    background-color: none;
+    background-color: rgb(30, 47, 58);
     /*background-color: rgb(18, 18, 44);
     border-bottom: 2px solid rgb(241, 201, 68);*/
     padding: 3vh 10%;
     padding-bottom: 4vh;
+    opacity: 0;
+    animation: slideDownFadeIn 0.5s ease forwards 2.7s;
+    z-index: 3;
 }
 
 .navbar-content {
@@ -189,13 +239,16 @@ h1, h2, h3 {
     height: 100%;
     display: flex;
     align-items: center;
+    padding-left: 22%;
+    animation: middleToLeft 0.8s ease forwards 2.1s;
 }
 
 .home-card{
-    border: 2px solid white;
+    border: 4px solid rgba(255, 255, 255, 0);
     /* top right bottom left*/
     padding: 10px 40px 40px 40px;
     margin-right: 10%;
+    animation: borderFade 0.5s ease forwards 2.7s;
 }
 
 .card-box {
@@ -356,19 +409,68 @@ h3.regular-text {
     }
 }
 
-@keyframes fadein {
+@keyframes line-animations{
+    to {
+        stroke-dashoffset: 0px;
+    }
+}
+
+@keyframes fill-text {
+    from {
+        fill: transparent;
+    }
+    to {
+        fill: white;
+    }
+}
+
+@keyframes middleToLeft {
+    from {
+        padding-left: 22%;
+    }
+
+    to {
+        padding-left: 0%;
+    }
+}
+
+@keyframes resumeAppear {
+    from {
+        background-color: rgba(87, 167, 115, 0);
+        color: rgba(255, 255, 255, 0);
+        pointer-events: none;
+    }
+    to {
+        background-color: rgb(73, 167, 105);
+        color: white;
+        pointer-events: inherit;
+    }
+}
+
+@keyframes fadeIn {
     from { opacity: 0; }
     to   { opacity: 1; }
 }
 
-@keyframes slideIn {
+@keyframes borderFade {
+    from {
+        border: 4px solid rgba(255, 255, 255, 0);
+    }
+    to {
+        border: 4px solid white;
+    }
+}
+
+@keyframes slideDownFadeIn {
     0% {
-      transform: translateX(-900px);
+      transform: translateY(-100px);
+      opacity: 0;
     }
     100% {
-      transform: translateX(0);
+      transform: translateY(0);
+      opacity: 1;
     }
-  }
+}
 
 @keyframes glowing {
     0% { background-color: #57A773; box-shadow: 0 0 3px #57A773; }
