--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
 * {
     
 }
@@ -203,7 +204,7 @@ h1, h2, h3 {
     position: fixed;
     top: 0;
     width: 80%;
-    height: 20px;
+    height: 3vh;
     background-color: rgb(30, 47, 58);
     /*background-color: rgb(18, 18, 44);
     border-bottom: 2px solid rgb(241, 201, 68);*/
@@ -310,12 +311,12 @@ h1, h2, h3 {
 }
 
 
-/* Section III: Noteworthy Projects*/
+/* Section III: Projects*/
 #projects-container {
     height: 80vh;
     width: 70%;
     max-width:100%;
-    background-color: #89BED1;
+    background-color: #DAFFEF;
     padding: 10vh 15%;
 }
 
@@ -362,8 +363,72 @@ h3.regular-text {
 .project-rectangle-left {
     float: left;
 }
+/* Section IV: Contact Form */
+#contact-container {
+    height: 70vh;
+    background-color: rgb(157, 213, 233);
+}
+.contact-box {
+    margin: 0 auto;
+    height: 100%;
+    width: 100%;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-family: 'Poppins', sans-serif;
+}
+
+#contact-form {
+    width: 33%;
+}
+
+.contact-input {
+    color: white;
+    background-color: #2f2f31;
+    border: none;
+    font-family: 'Poppins', sans-serif;
+}
+.contact-box > h1 {
+    font-size: 35px;
+    margin-bottom: 50px;
+    color: rgb(32, 44, 77);
+    border-bottom: 4px solid rgb(10, 85, 99);
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
 
 
+input[type=text].contact-input, input[type=email].contact-input {
+    width: 100%;
+    height: 30px;
+    padding: 2px 10px;
+    margin-bottom: 2px;
+    box-sizing: border-box;
+}
+input.contact-input:focus {
+    outline: none;
+}
+input[type=submit] {
+    float: right;
+}
+textarea.contact-input {
+    height: 200px;
+    width: 100%;
+    max-height: 300px;
+    resize: vertical;
+    padding: 10px 10px;
+    box-sizing: border-box;
+}
+textarea.contact-input:focus {
+    outline:none;
+}
+/* Section V: Footer */
+#footer {
+    height: 20vh;
+    background: rgb(30, 47, 58);
+}
 /* For screens bigger than 1440 x 1024 */
 
 @media screen and (min-width: 1441px) {
