--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -25,7 +25,7 @@
             <path d="M543.753 14.38C546.507 14.38 548.91 14.94 550.963 16.06C553.063 17.18 554.673 18.65 555.793 20.47V14.94H567.763V53.93C567.763 57.5233 567.04 60.7667 565.593 63.66C564.193 66.6 562.023 68.9334 559.083 70.66C556.19 72.3867 552.573 73.25 548.233 73.25C542.447 73.25 537.757 71.8734 534.163 69.12C530.57 66.4134 528.517 62.7267 528.003 58.06H539.833C540.207 59.5533 541.093 60.72 542.493 61.56C543.893 62.4467 545.62 62.89 547.673 62.89C550.147 62.89 552.107 62.1667 553.553 60.72C555.047 59.32 555.793 57.0567 555.793 53.93V48.4C554.627 50.22 553.017 51.7133 550.963 52.88C548.91 54 546.507 54.56 543.753 54.56C540.533 54.56 537.617 53.7433 535.003 52.11C532.39 50.43 530.313 48.0733 528.773 45.04C527.28 41.96 526.533 38.4134 526.533 34.4C526.533 30.3867 527.28 26.8633 528.773 23.83C530.313 20.7967 532.39 18.4633 535.003 16.83C537.617 15.1967 540.533 14.38 543.753 14.38ZM555.793 34.47C555.793 31.4833 554.953 29.1267 553.273 27.4C551.64 25.6733 549.633 24.81 547.253 24.81C544.873 24.81 542.843 25.6733 541.163 27.4C539.53 29.08 538.713 31.4133 538.713 34.4C538.713 37.3867 539.53 39.7667 541.163 41.54C542.843 43.2667 544.873 44.13 547.253 44.13C549.633 44.13 551.64 43.2667 553.273 41.54C554.953 39.8133 555.793 37.4567 555.793 34.47Z" stroke="white" stroke-width="3"/>
             </svg>
             <p class="sub-text">A full stack software engineer focused on building seamless interfaces and improving user experiences.</p>
-            <div class="fadeIn"><%= link_to 'https://www.dropbox.com/s/279qikkjwe6cevh/Jonathan%20Hong%20Resume.pdf?dl=0', :target => '_blank', :class => 'resume' do%>
+            <div class="fadeIn"><%= link_to 'https://www.dropbox.com/s/49f5ijvto0dq63s/Jonathan%20Hong%20Resume.pdf?dl=0', :target => '_blank', :class => 'resume' do%>
             <%= image_tag('resume.svg', :class => 'resume_img')%> <p>View my resume</p>
             <% end %>
             </div>
@@ -38,7 +38,7 @@
 
 <section id='background-container'>
    <div class='content'>
-      <div class='inner-content'>
+      <div class='inner-content-background'>
          <div class='about-card'>
             <h1 class='section-title'>About Me</h1>
             <p class="sub-text width-30vw profile-desc">Hello, I’m Jonathan, a software engineer based in New Brunswick, NJ. I’m expecting to graduate from Rutgers University School of Engineering in May of 2020, pursuing a Bachelor of Science in Computer Engineering with a minor in Computer Science.</p>
@@ -47,10 +47,30 @@
       </div>
    </div>
 </section>
+<div id='modal'>
 
-
+</div>
 <section id='projects-container'>
-  <h1>Projects</h1>
+   <div class='content content-center'>
+      <h1 class='projects-title'>Projects</h1>
+      <div id='project-grid'>
+         <div class='project-card'>
+
+         </div>
+         <div class='project-card'>
+
+         </div>
+         <div class='project-card'>
+
+         </div>
+         <div class='project-card'>
+
+         </div>
+         <div class='project-card'>
+
+         </div>
+      </div>
+   </div>
 </section>
 
 <section id='contact-container'>
