--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -19,7 +19,7 @@ h1, h2, h3 {
     height: 90vh;
     width: 80%;
     max-width: 100%;
-    background-color: #64B6AC;
+    background-color: #6A8EAE;
     padding: 5vh 10%;
     
 }
@@ -51,12 +51,7 @@ h1, h2, h3 {
     opacity: 0;
     animation: fadeIn 0.5s ease forwards 2.7s;
 }
-.polygon {
-    z-index: 2;
-}
-.rectangle {
-    z-index: 1;
-}
+
 
 .regular-text {
     font-family: 'Roboto', sans-serif;
@@ -212,7 +207,7 @@ h1, h2, h3 {
     padding-bottom: 4vh;
     opacity: 0;
     animation: slideDownFadeIn 0.5s ease forwards 2.7s;
-    z-index: 3;
+    z-index: 1;
 }
 
 .navbar-content {
@@ -310,6 +305,19 @@ h1, h2, h3 {
     z-index: 2;
 }
 
+/* Project Modal */
+
+#modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: none;
+    background-color: rgb(0,0,0,0.4);
+}
 
 /* Section III: Projects*/
 #projects-container {
@@ -319,50 +327,32 @@ h1, h2, h3 {
     background-color: #DAFFEF;
     padding: 10vh 15%;
 }
-
-.projects-hr{
-    display: inline-block;
-    height: 1px;
-    border: 0;
-    border-top: 2px solid #F1F1F6;
-    width: 67%;
-    margin: 0.6em 0;
-    padding: 0;
+.content-center {
+    width: 100%;
+    text-align: center;
 }
-h3.regular-text {
-    display: inline-block;
-    margin-bottom: 0px;
+.projects-title {
+    color: rgb(32, 44, 77);
+    font-family: 'Poppins', sans-serif;
+    font-size: 35px;
+    border-bottom: 4px solid rgb(10, 85, 99);
 }
-
-.marg-top-4vh {
-    margin-top: 4vh;
+#project-grid {
+    margin-top: 30px;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
-
-.marg-top-10vh{
-    margin-top: 10vh;
-}
-
-.width-20vw{
-    width: 23vw;
-}
-.project-row {
-    clear: both;
-}
-.project-text-left{
-    float: left;
-}
-.project-text-right {
-    text-align: right;
-    float: right;
+.project-card {
+    width: 33%;
+    height: 33%;
+    background-color: grey;
 }
 
-.project-rectangle-right {
-    float: right;
-}
 
-.project-rectangle-left {
-    float: left;
-}
 /* Section IV: Contact Form */
 #contact-container {
     height: 70vh;
@@ -381,6 +371,7 @@ h3.regular-text {
 
 #contact-form {
     width: 33%;
+    max-width: 600px;
 }
 
 .contact-input {
@@ -391,7 +382,7 @@ h3.regular-text {
 }
 .contact-box > h1 {
     font-size: 35px;
-    margin-bottom: 50px;
+    margin-bottom: 10px;
     color: rgb(32, 44, 77);
     border-bottom: 4px solid rgb(10, 85, 99);
     box-sizing: border-box;
@@ -399,12 +390,18 @@ h3.regular-text {
     -webkit-box-sizing: border-box;
 }
 
+.contact-box > p {
+    color: rgb(32, 44, 77);
+    font-family: 'Poppins', sans-serif;
+    margin-bottom: 30px;
+}
+
 
 input[type=text].contact-input, input[type=email].contact-input {
     width: 100%;
     height: 30px;
     padding: 2px 10px;
-    margin-bottom: 2px;
+    margin-bottom: 15px;
     box-sizing: border-box;
 }
 input.contact-input:focus {
@@ -412,14 +409,29 @@ input.contact-input:focus {
 }
 input[type=submit] {
     float: right;
+    border: 1px solid rgb(16, 124, 16);
+    padding: 5px 20px;
+    color: white;
+    background-color: rgba(16, 124, 16, 0.473);
+    font-family: 'Poppins', sans-serif;
+    transition: 0.5s;  
+    border-radius: 3px;
+    
 }
+input[type='submit']:hover {
+    background-color: rgb(16, 124, 16);
+    box-shadow: 1px 2px #888888;
+}
+
 textarea.contact-input {
     height: 200px;
     width: 100%;
+    min-height: 150px;
     max-height: 300px;
     resize: vertical;
     padding: 10px 10px;
     box-sizing: border-box;
+    margin-bottom: 15px;
 }
 textarea.contact-input:focus {
     outline:none;
@@ -446,27 +458,6 @@ textarea.contact-input:focus {
         top: 24vh;
         right: 20vw;
     }*/
-
-    .profile-border-square-1 {
-        position: absolute;
-        top: 120vh;
-        right: 30.75vw;
-        z-index: 1;
-    }
-    
-    .profile-border-square-2 {
-        position: absolute;
-        top: 124vh;
-        right: 28.75vw;
-        z-index: 2;
-    }
-    
-    .profile-picture {
-        position: absolute;
-        top: 122vh;
-        right: 29.75vw;
-        z-index: 3;
-    }
 
     .profile-desc {
         width: 500px;
