--- a/app/views/home/main.html.erb
+++ b/app/views/home/main.html.erb
@@ -44,6 +44,10 @@
             <p class="sub-text width-30vw profile-desc">Hello, I’m Jonathan, a software engineer based in New Brunswick, NJ. I’m expecting to graduate from Rutgers University School of Engineering in May of 2020, pursuing a Bachelor of Science in Computer Engineering with a minor in Computer Science.</p>
          </div>
          <%= image_tag 'jon.png', :class => 'profile-visual'%>         
+         <div>
+            <h1 class='section-title'>Skills</h1>
+            
+         </div>
       </div>
    </div>
 </section>
